# clangen_catmaker-modded

./: .gitignore  Catmaker.spec  README.md  appdmg.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
resources/: buttons.json  gene_config.toml  text_boxes.json
scripts/: global_vars.py  utility.py
scripts/cat/: cats.py  genotype.py  pelts.py  phenotype.py  sprites.py
scripts/game_structure/: image_button.py
scripts/screens/: creation_screen.py  organization_screens.py  save_dict.py  save_image.py
sprites/dicts/: eye_colour_data.json  scar_missing_sprite_data.json  tint.json  tortie_patches_sprite_data.json  white_patches_tint.json
sprites/genemod/medibang/: albino_skin.mdp  bases.mdp  bases_archive.mdp  bimetal.mdp  bobtails.mdp  curllineart.mdp  ears.mdp  effects.mdp  eyebases.mdp  eyes.mdp  eyes2.mdp  eyes3.mdp  eyes4.mdp  eyes5.mdp  eyesections.mdp  folded_ears.mdp  fourears.mdp  hairless.mdp  karpati.mdp  lightbases.mdp  mocha_spring.mdp  mocha_summer.mdp  mocha_winter.mdp  modded_ears.mdp  new karpati.mdp  new points.mdp  new tabby patterns.mdp  nose_colours.mdp  noses.mdp  notes.txt  paw_pads.mdp  pheo gradients.mdp  pheomelanin.mdp  points_spring.mdp  points_summer.mdp  points_winter.mdp  rex.mdp  rusting.mdp  salmiak.mdp  skin.mdp  (+5 more)
sprites/genemod/medibang/New Tabbies/: beige.mdp  black.mdp  blue.mdp  buff.mdp  champagne.mdp  cinnamon.mdp  dove.mdp  fawn.mdp  honey.mdp  ivory.mdp  lavender.mdp  lilac.mdp  platinum.mdp  red.mdp  shading.mdp  unders.mdp
sprites/genemod/medibang/New eumelanin/: beige.mdp  black.mdp  (+12 more)
(+17 files in other folders)
